[workspace]
# In alphabetical order
members = [
    "arrow_util",
#   "clap_blocks",
    "client_util",
#   "compactor",
    "data_types",
    "datafusion",
    "datafusion_util",
    "dml",
    "generated_types",
#   "influxdb2_client",
    "influxdb_iox",
    "influxdb_iox_client",
#   "influxdb_line_protocol",
#   "iox_catalog",
    "iox_time",
#   "logfmt",
#   "metric",
#   "metric_exporters",
    "mutable_batch",
    "mutable_batch_lp",
    "mutable_batch_pb",
    "observability_deps",
    "predicate",
#   "query_functions", dependency for predicate
    "schema",
#   "sqlx-hotswap-pool", dependency for clap_blocks, iox_catalog
#   "test_helpers", dependency for influxdb_line_protocol
#   "test_helpers_end_to_end", dependency for influxdb_iox
    "trace",
#   "trace_exporters", dependecy for clap_blocks
#   "trace_http", dependency for clap_blocks, write_buffer
#   "trogging", dependecy for clap_blocks
    "workspace-hack",
    "write_buffer",
]
default-members = ["influxdb_iox_client"]

resolver = "2"

exclude = [
    "*.md",
    "*.txt",
    ".circleci/",
    ".editorconfig",
    ".git*",
    ".github/",
    ".kodiak.toml",
    "Dockerfile*",
    "LICENSE*",
    "buf.yaml",
    "docker/",
    "docs/",
    "massif.out.*",
    "perf/",
    "scripts/",
    "test_bench/",
    "test_fixtures/",
    "tools/",
]

# This profile optimizes for runtime performance and small binary size at the expense of longer
# build times. It's most suitable for final release builds.
[profile.release]
codegen-units = 16
debug = true
lto = "thin"

[profile.bench]
debug = true

# This profile optimizes for short build times at the expense of larger binary size and slower
# runtime performance. It's most suitable for development iterations.
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true
